NPT-910: created more specific end points to retrieve bmps that are relevant instead of grabbing the whole list of bmps
